fixed weird clipping on top of photos

--- a/eauweb/static/css/nightmarket.css
+++ b/eauweb/static/css/nightmarket.css
@@ -28,7 +28,6 @@
   height: 300px;
   width: auto;
   background-size: cover;
-  background-size: 100% auto;
   background-attachment: fixed;
 }
 
@@ -38,7 +37,6 @@
   height: 300px;
   width: auto;
   background-size: cover;
-  background-size: 100% auto;
   background-attachment: fixed;
 }
 
